--- a/index.html
+++ b/index.html
@@ -128,7 +128,8 @@
 
   <canvas id="game"></canvas>
 
-  
+  <div id="leftButton" class="control-button"></div>
+  <div id="rightButton" class="control-button"></div>
 
   <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
   <script src="game.js"></script>
