--- a/index.html
+++ b/index.html
@@ -20,12 +20,8 @@
     }
     canvas {
       display: block;
-      width: 100%;
-      height: 100%;
-      background: url('background.png') center center / cover no-repeat; /* Фон растянут на весь экран */
-      image-rendering: pixelated;
       position: absolute;
-      top: 0; left: 0;
+      image-rendering: pixelated;
     }
     #score {
       position: absolute;
@@ -34,7 +30,7 @@
       color: lime;
       font-size: 18px;
       z-index: 10;
-      background: rgba(0, 0, 0, 0.5); /* Полупрозрачный фон для читаемости */
+      background: rgba(0, 0, 0, 0.5);
       padding: 5px 10px;
       border-radius: 4px;
     }
@@ -97,19 +93,17 @@
       display: flex;
       align-items: center;
       justify-content: center;
-      background: #007bff; /* Синий фон, как на скриншоте */
-      border-radius: 8px;
+      background: #ff6f61;
+      border-radius: 20px;
     }
     .control-button:active {
-      background: #0056b3; /* Темнее при нажатии */
+      background: #e55a50;
     }
     #leftButton {
       left: 0;
-  background: url('leftButton.png') center center / contain no-repeat;
     }
     #rightButton {
       right: 0;
-  background: url('rightButton.png') center center / contain no-repeat;
     }
   </style>
 </head>
@@ -120,7 +114,7 @@
     <h1>🍺 Ачер vs Хадыжи</h1>
     <p id="startText">Очисти посёлок от бутылок и победи Тимура!</p>
     <button onclick="startGame()">Начать игру</button>
-    <div id="leaderboard">
+    <div id="score">
       <strong>🏆 Топ 10 игроков:</strong><br>
       <div id="topScores"></div>
     </div>
@@ -128,8 +122,8 @@
 
   <canvas id="game"></canvas>
 
-  <div id="leftButton" class="control-button"></div>
-  <div id="rightButton" class="control-button"></div>
+  <div id="leftButton" class="control-button">Влево</div>
+  <div id="rightButton" class="control-button">Вправо</div>
 
   <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
   <script src="game.js"></script>
