--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no"/>
   <title>Beer Blaster</title>
+  <link rel="icon" type="image/png" href="data:image/png;base64,iVBORw0KGgo="> <!-- Пустая иконка -->
   <style>
     * {
       -webkit-user-select: none;
@@ -114,7 +115,7 @@
     <h1>🍺 Ачер vs Хадыжи</h1>
     <p id="startText">Очисти посёлок от бутылок и победи Тимура!</p>
     <button onclick="startGame()">Начать игру</button>
-    <div id="score">
+    <div id="leaderboard">
       <strong>🏆 Топ 10 игроков:</strong><br>
       <div id="topScores"></div>
     </div>
