--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
     }
     #rightButton {
       right: 0;
-      background-image: url('rightBetton.png');
+      background-image: url('rightButton.png');
     }
   </style>
 </head>
