--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
     }
     .control-button {
       position: absolute;
-      bottom: 10px; /* Уменьшено, чтобы быть под canvas */
+      bottom: 10px; /* Временное значение, будет переопределено в JS */
       width: 45%;
       height: 80px;
       z-index: 30;
